--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<title>Grade 1 Demo: Vanilla CSS Scroll</title>
 	<link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="./assets/css/style.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <script src="./assets/js/main.js" defer></script>
 </head>
 <body>
@@ -28,11 +30,37 @@
 	<main id="main">
 		<!-- Hero Section -->
 		<section id="hero" class="hero">
+			<div id="carouselExampleIndicators" class="carousel slide">
+<div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="https://ik.imagekit.io/ccu04wlaa/Railroad_Plains_b.webp" class="d-block w-1000" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="https://ik.imagekit.io/ccu04wlaa/Railroad_Plains_b.webp" class="d-block w-1000" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="https://ik.imagekit.io/ccu04wlaa/Railroad_Plains_b.webp" class="d-block w-1000" alt="...">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
 			<div class="hero-bg parallax-bg"></div>
 			<div class="hero-content">
-				<h1 class="hero-title animate-on-scroll">Jane Developer</h1>
-				<p class="hero-subtitle animate-on-scroll">Front-End Engineer & UI Designer</p>
-				<a href="#projects" class="btn animate-on-scroll">View My Work</a>
+				<h1 class="hero-title animate-on-scroll">DALASSO</h1>
+				<p class="hero-subtitle animate-on-scroll">A-LITTLE-OF-EVERYTHING ILUSTRATOR</p>
+				<a href="#projects" class="btn animate-on-scroll">Check out what I have</a>
 			</div>
 			<div class="scroll-indicator">
 				<span>Scroll</span>
