--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<!-- Navigation -->
 	<nav class="nav">
 		<div class="nav-container">
-			<a href="#" class="nav-logo">Portfolio</a>
+			<a href="#" class="nav-logo">DALASSO</a>
 			<ul class="nav-links">
 				<li><a href="#hero">Home</a></li>
 				<li><a href="#about">About</a></li>
@@ -30,37 +30,38 @@
 	<main id="main">
 		<!-- Hero Section -->
 		<section id="hero" class="hero">
-			<div id="carouselExampleIndicators" class="carousel slide">
-<div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-  </div>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="https://ik.imagekit.io/ccu04wlaa/Railroad_Plains_b.webp" class="d-block w-1000" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="https://ik.imagekit.io/ccu04wlaa/Railroad_Plains_b.webp" class="d-block w-1000" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="https://ik.imagekit.io/ccu04wlaa/Railroad_Plains_b.webp" class="d-block w-1000" alt="...">
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
-			<div class="hero-bg parallax-bg"></div>
-			<div class="hero-content">
-				<h1 class="hero-title animate-on-scroll">DALASSO</h1>
-				<p class="hero-subtitle animate-on-scroll">A-LITTLE-OF-EVERYTHING ILUSTRATOR</p>
-				<a href="#projects" class="btn animate-on-scroll">Check out what I have</a>
+			<div class="hero-bg parallax-bg">
+							<div id="carouselExampleIndicators" class="carousel slide">
+                            <div class="carousel-indicators">
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                            </div>
+                            <div class="carousel-inner">
+                            <div class="carousel-item active">
+                             <img src="https://ik.imagekit.io/ccu04wlaa/OOGA%20BUGAaaaaaaaa%20naranja.png" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                             <img src="https://ik.imagekit.io/ccu04wlaa/PALOMo%20naranja.png" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                             <img src="https://ik.imagekit.io/ccu04wlaa/GIAF%20naranja.png" class="d-block w-100" alt="...">
+                            </div>
+                            </div>
+                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                            </button>
+                            </div>
+						    <div class="hero-content">
+							<h1 class="hero-title animate-on-scroll">DALASSO</h1>
+							<h2 class="hero-subtitle animate-on-scroll">A-LITTLE-OF-EVERYTHING ILUSTRATOR</h2>
+							<a href="#projects" class="btn animate-on-scroll">Check out what I have</a>
+							</div>
 			</div>
 			<div class="scroll-indicator">
 				<span>Scroll</span>
