TERCER CAMBIO (COLOR Y TEXTO)

--- a/index.html
+++ b/index.html
@@ -33,34 +33,33 @@
 			<div class="hero-bg parallax-bg">
 							<div id="carouselExampleIndicators" class="carousel slide">
                             <div class="carousel-indicators">
-                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                           		<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                            	<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                            	<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
                             </div>
-                            <div class="carousel-inner">
-                            <div class="carousel-item active">
-                             <img src="https://ik.imagekit.io/ccu04wlaa/OOGA%20BUGAaaaaaaaa%20naranja.png" class="d-block w-100" alt="...">
+                             <div class="carousel-inner">
+                             <div class="carousel-item active">
+                            	<img src="https://ik.imagekit.io/ccu04wlaa/OOGA%20BUGAaaaaaaaa%20naranja.png" class="d-block w-100" alt="...">
+                             </div>
+                             	 <div class="carousel-item">
+                            	 <img src="https://ik.imagekit.io/ccu04wlaa/PALOMo%20naranja.png" class="d-block w-100" alt="...">
+                             </div>
+                           	 <div class="carousel-item">
+                            	 <img src="https://ik.imagekit.io/ccu04wlaa/GIAF%20naranja.png" class="d-block w-100" alt="...">
                             </div>
-                            <div class="carousel-item">
-                             <img src="https://ik.imagekit.io/ccu04wlaa/PALOMo%20naranja.png" class="d-block w-100" alt="...">
                             </div>
-                            <div class="carousel-item">
-                             <img src="https://ik.imagekit.io/ccu04wlaa/GIAF%20naranja.png" class="d-block w-100" alt="...">
-                            </div>
-                            </div>
-                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Previous</span>
-                            </button>
-                            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Next</span>
-                            </button>
-                            </div>
-						    <div class="hero-content">
-							<h1 class="hero-title animate-on-scroll">DALASSO</h1>
-							<h2 class="hero-subtitle animate-on-scroll">A-LITTLE-OF-EVERYTHING ILUSTRATOR</h2>
-							<a href="#projects" class="btn animate-on-scroll">Check out what I have</a>
+                            	<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                            		<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                           			<span class="visually-hidden">Previous</span>
+                           		 </button>
+                           		<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                           		 	<span class="carousel-control-next-icon" aria-hidden="true"></span>
+                           		 	<span class="visually-hidden">Next</span>
+                           		 </button>
+								<div class="hero-content">
+									<h1 class="hero-title animate-on-scroll">DALASSO</h1>
+									<h2 class="hero-subtitle animate-on-scroll">A-LITTLE-OF-EVERYTHING ILUSTRATOR</h2>
+									<a href="#projects" class="btn animate-on-scroll">Check out what I have</a>
 							</div>
 			</div>
 			<div class="scroll-indicator">
@@ -72,39 +71,39 @@
 		<!-- About Section -->
 		<section id="about" class="section about">
 			<div class="container">
-				<h2 class="section-title animate-on-scroll">About Me</h2>
+				<h2 class="section-title animate-on-scroll">WHO IS DALASSO?</h2>
 				<div class="about-grid">
 					<div class="about-text animate-on-scroll">
 						<p>
-							I'm a passionate front-end developer with 5 years of experience
-							building responsive, accessible, and performant web applications.
+							My name is David Lasso de la Vega, I´m a ilustrator with a passion for
+							design and learning new things. Everyday I strive to improve my skills to another level.
 						</p>
 						<p>
-							My focus is on creating seamless user experiences through clean code
-							and thoughtful design. I believe in the power of vanilla JavaScript
-							and modern CSS to create stunning interfaces without framework bloat.
+							I create ilustrations, graphics designs, audiovisuals pieces and web interfaces.
+							I aim to use my creativity to deliver hifh-quality works to my clients 
+							and improve while working and learning new things.
 						</p>
 					</div>
 					<div class="skills-grid" data-reveal-stagger>
 						<div class="skill-card">
 							<span class="skill-icon">🎨</span>
-							<h3>CSS/Sass</h3>
+							<h3>ILUSTRATION</h3>
 							<div class="skill-bar"><div class="skill-fill" style="--fill: 95%"></div></div>
 						</div>
 						<div class="skill-card">
-							<span class="skill-icon">⚡</span>
-							<h3>JavaScript</h3>
+							<span class="skill-icon">✏️</span>
+							<h3>GRAPHIC DESIGN</h3>
 							<div class="skill-bar"><div class="skill-fill" style="--fill: 90%"></div></div>
 						</div>
 						<div class="skill-card">
-							<span class="skill-icon">📱</span>
-							<h3>Responsive</h3>
-							<div class="skill-bar"><div class="skill-fill" style="--fill: 98%"></div></div>
+							<span class="skill-icon">🎥</span>
+							<h3>AUDIOVISUALS</h3>
+							<div class="skill-bar"><div class="skill-fill" style="--fill: 80%"></div></div>
 						</div>
 						<div class="skill-card">
-							<span class="skill-icon">♿</span>
-							<h3>A11y</h3>
-							<div class="skill-bar"><div class="skill-fill" style="--fill: 85%"></div></div>
+							<span class="skill-icon">👨‍💻</span>
+							<h3>HTML/CSS/JS</h3>
+							<div class="skill-bar"><div class="skill-fill" style="--fill: 70%"></div></div>
 						</div>
 					</div>
 				</div>
@@ -176,7 +175,7 @@
 	<!-- Footer -->
 	<footer class="footer">
 		<div class="container">
-			<p>&copy; 2025 Jane Developer. Built with vanilla HTML, CSS & JS.</p>
+			<p>&copy; 2026 David Lasso de la Vega J. Built with HTML, CSS & JS.</p>
 			<a href="#hero" class="back-to-top" aria-label="Back to top">↑</a>
 		</div>
 	</footer>
