PROYECTOS Y CONTACTOS CAMBIADOS

--- a/index.html
+++ b/index.html
@@ -117,37 +117,37 @@
 				<div class="projects-grid" data-reveal-stagger>
 					<article class="project-card">
 						<div class="project-image">
-							<img src="https://picsum.photos/400/300?random=1" alt="E-commerce Platform" loading="lazy" />
+							<img src="https://ik.imagekit.io/ccu04wlaa/IMG_0945.jpeg?updatedAt=1766776812003" alt="ilustrations" loading="lazy" />
 						</div>
 						<div class="project-content">
-							<h3>E-commerce Platform</h3>
-							<p>A fully responsive online store with cart functionality and payment integration.</p>
+							<h3>Ilustrations</h3>
+							<p>Check the art I make for different projects, with different styles and ideas.</p>
 							<div class="project-tags">
-								<span>HTML</span><span>CSS</span><span>JS</span>
+								<span>Styles</span><span>Fan art</span><span>OC</span>
 							</div>
 						</div>
 					</article>
 					<article class="project-card">
 						<div class="project-image">
-							<img src="https://picsum.photos/400/300?random=2" alt="Dashboard UI" loading="lazy" />
+							<img src="https://ik.imagekit.io/ccu04wlaa/DAVID_L_NEWYORKER.jpg" alt="infography" loading="lazy" />
 						</div>
 						<div class="project-content">
-							<h3>Analytics Dashboard</h3>
-							<p>Real-time data visualization dashboard with dark mode support.</p>
+							<h3>Infography</h3>
+							<p>The use of information and ilustrations in one. Look at how I use them to create infographies about everything.</p>
 							<div class="project-tags">
-								<span>CSS Grid</span><span>Charts</span><span>API</span>
+								<span>Infograms</span><span>Icons</span><span>News</span>
 							</div>
 						</div>
 					</article>
 					<article class="project-card">
 						<div class="project-image">
-							<img src="https://picsum.photos/400/300?random=3" alt="Mobile App Landing" loading="lazy" />
+							<img src="https://ik.imagekit.io/ccu04wlaa/Beige%20Tan%20Elegant%20Neutral%20Brand%20Feature%20Instagram%20Post.jpg" alt="Edition" loading="lazy" />
 						</div>
 						<div class="project-content">
-							<h3>App Landing Page</h3>
-							<p>Conversion-optimized landing page with scroll animations.</p>
+							<h3>Edition</h3>
+							<p>With Photoshop, After effects and other tools I edit images or videos to make the perfect adds or posters.</p>
 							<div class="project-tags">
-								<span>Animation</span><span>A/B Test</span><span>SEO</span>
+								<span>Animation</span><span>Video</span><span>Images</span>
 							</div>
 						</div>
 					</article>
@@ -158,14 +158,15 @@
 		<!-- Contact Section -->
 		<section id="contact" class="section contact">
 			<div class="container">
-				<h2 class="section-title animate-on-scroll">Get In Touch</h2>
+				<h2 class="section-title animate-on-scroll">Let's create something...</h2>
 				<div class="contact-content animate-on-scroll">
-					<p>Interested in working together? Let's talk about your project.</p>
-					<a href="mailto:hello@example.com" class="btn btn-primary">Say Hello</a>
+					<p>If you are interested in working together, contact me in any of my social links.</p>
+					<a href="mailto:hello@example.com" class="btn btn-primary">Go talk to me!</a>
 					<div class="social-links">
-						<a href="#" aria-label="GitHub">GitHub</a>
-						<a href="#" aria-label="LinkedIn">LinkedIn</a>
-						<a href="#" aria-label="Twitter">Twitter</a>
+						<a href="https://github.com/Dalasso" aria-label="GitHub">GitHub</a>
+						<a href="https://www.linkedin.com/in/david-lasso-de-la-vega-364aa6349/" aria-label="LinkedIn">LinkedIn</a>
+						<a href="https://www.instagram.com/dalasso_garabatos/" aria-label="Instagram">Instagram</a>
+
 					</div>
 				</div>
 			</div>
