--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
 	<title>Grade 1 Demo: Vanilla CSS Scroll</title>
 	<link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="./assets/css/style.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<style>
+	@import url('https://fonts.googleapis.com/css2?family=Tagesschrift&display=swap');
+	</style>
+	<link href="https://fonts.googleapis.com/css2?family=Tagesschrift&display=swap" rel="stylesheet">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <script src="./assets/js/main.js" defer></script>
@@ -161,7 +167,7 @@
 				<h2 class="section-title animate-on-scroll">Let's create something...</h2>
 				<div class="contact-content animate-on-scroll">
 					<p>If you are interested in working together, contact me in any of my social links.</p>
-					<a href="mailto:hello@example.com" class="btn btn-primary">Go talk to me!</a>
+					<a href="mailto:dalassojim@gmail.com" class="btn btn-primary" role="button" aria-label="Email David Lasso" onclick="window.location.href='mailto:dalassojim@gmail.com'">Go talk to me!</a>
 					<div class="social-links">
 						<a href="https://github.com/Dalasso" aria-label="GitHub">GitHub</a>
 						<a href="https://www.linkedin.com/in/david-lasso-de-la-vega-364aa6349/" aria-label="LinkedIn">LinkedIn</a>
